--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -31,7 +31,7 @@ const { showNavigation = true } = Astro.props;
             <nav class="hidden md:flex items-center space-x-2">
                 <a href="/" class="nav-link">Home</a>
                 <a href="/blog" class="nav-link">All Posts</a>
-                <a href="#" class="nav-link">Main Site</a>
+                <a href="https://skill-wanderer.com/" class="nav-link">Main Site</a>
             </nav>
         )}
 
